# Venta-libre

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/database/: connection.rs  mod.rs
backend/src/handlers/: auth.rs  health.rs  metrics.rs  mod.rs  users.rs
backend/src/health/: checks.rs  mod.rs
backend/src/logging/: logger.rs  middleware.rs  mod.rs
backend/src/metrics/: collector.rs  mod.rs
backend/src/models/: auth.rs  user.rs
backend/src/routes/: auth.rs  mod.rs  users.rs
mobile/android/gradle/wrapper/: gradle-wrapper.properties
mobile/ios/ios/: ContentView.swift  Persistence.swift  iosApp.swift
mobile/ios/ios.xcodeproj/: project.pbxproj
mobile/ios/ios.xcodeproj/project.xcworkspace/xcuserdata/nexus.xcuserdatad/: UserInterfaceState.xcuserstate
mobile/ios/iosTests/: iosTests.swift
mobile/ios/iosUITests/: iosUITests.swift  iosUITestsLaunchTests.swift
web-frontend/: package-lock.json  package.json
web-frontend/src/: main.js  style.css
web-frontend/src/components/: navbar.js
web-frontend/src/components/ui/: BottomNav.js  CategoryList.js  ProductCard.js  SearchBar.js  TopNav.js
web-frontend/src/pages/: home.js  users.js
web-frontend/src/services/: api.js
web-frontend/src/utils/: router.js
