[package]
name = "venta-libre-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full", "time"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "catch-panic", "timeout"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

# Autenticación
bcrypt = "0.15"
jsonwebtoken = "9.0"

# Logging y observabilidad profesional
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Health checks y métricas
sysinfo = "0.30"
num_cpus = "1.16"